syntax = "proto3";
package secondary;


message IMU_ANGULAR_RATE {
    float ang_rate_x = 1;
    float ang_rate_y = 2;
    float ang_rate_z = 3;
    uint64 _inner_timestamp = 4;
}

message IMU_ACCELERATION {
    float accel_x = 1;
    float accel_y = 2;
    float accel_z = 3;
    sint32 temperature = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FL_0 {
    float channel1 = 1;
    float channel2 = 2;
    float channel3 = 3;
    float channel4 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FL_1 {
    float channel5 = 1;
    float channel6 = 2;
    float channel7 = 3;
    float channel8 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FL_2 {
    float channel9 = 1;
    float channel10 = 2;
    float channel11 = 3;
    float channel12 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FL_3 {
    float channel13 = 1;
    float channel14 = 2;
    float channel15 = 3;
    float channel16 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FR_0 {
    float channel1 = 1;
    float channel2 = 2;
    float channel3 = 3;
    float channel4 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FR_1 {
    float channel5 = 1;
    float channel6 = 2;
    float channel7 = 3;
    float channel8 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FR_2 {
    float channel9 = 1;
    float channel10 = 2;
    float channel11 = 3;
    float channel12 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_FR_3 {
    float channel13 = 1;
    float channel14 = 2;
    float channel15 = 3;
    float channel16 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RL_0 {
    float channel1 = 1;
    float channel2 = 2;
    float channel3 = 3;
    float channel4 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RL_1 {
    float channel5 = 1;
    float channel6 = 2;
    float channel7 = 3;
    float channel8 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RL_2 {
    float channel9 = 1;
    float channel10 = 2;
    float channel11 = 3;
    float channel12 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RL_3 {
    float channel13 = 1;
    float channel14 = 2;
    float channel15 = 3;
    float channel16 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RR_0 {
    float channel1 = 1;
    float channel2 = 2;
    float channel3 = 3;
    float channel4 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RR_1 {
    float channel5 = 1;
    float channel6 = 2;
    float channel7 = 3;
    float channel8 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RR_2 {
    float channel9 = 1;
    float channel10 = 2;
    float channel11 = 3;
    float channel12 = 4;
    uint64 _inner_timestamp = 5;
}

message IRTS_RR_3 {
    float channel13 = 1;
    float channel14 = 2;
    float channel15 = 3;
    float channel16 = 4;
    uint64 _inner_timestamp = 5;
}

message GPS_COORDS {
    float latitude = 1;
    float longitude = 2;
    uint64 _inner_timestamp = 3;
}

message GPS_SPEED {
    uint32 speed = 1;
    uint64 _inner_timestamp = 2;
}

message LAP_COUNT {
    uint32 lap_count = 1;
    uint32 lap_time = 2;
    uint64 _inner_timestamp = 3;
}

message PEDALS_OUTPUT {
    uint32 apps = 1;
    float bse_front = 2;
    float bse_rear = 3;
    uint64 _inner_timestamp = 4;
}

message STEERING_ANGLE {
    float angle = 1;
    uint64 _inner_timestamp = 2;
}

message CONTROL_STATE {
    float map_pw = 1;
    float map_sc = 2;
    float map_tv = 3;
    uint64 _inner_timestamp = 4;
}

message TPMS {
    float fl_pressure = 1;
    float fr_pressure = 2;
    float rl_pressure = 3;
    float rr_pressure = 4;
    uint32 fl_temperature = 5;
    uint32 fr_temperature = 6;
    uint32 rl_temperature = 7;
    uint32 rr_temperature = 8;
    uint64 _inner_timestamp = 9;
}

message LC_STATUS {
    uint32 last_time = 1;
    sint32 lap_number = 2;
    uint64 _inner_timestamp = 3;
}


message Pack {
    repeated IMU_ANGULAR_RATE IMU_ANGULAR_RATE = 1;
    repeated IMU_ACCELERATION IMU_ACCELERATION = 2;
    repeated IRTS_FL_0 IRTS_FL_0 = 3;
    repeated IRTS_FL_1 IRTS_FL_1 = 4;
    repeated IRTS_FL_2 IRTS_FL_2 = 5;
    repeated IRTS_FL_3 IRTS_FL_3 = 6;
    repeated IRTS_FR_0 IRTS_FR_0 = 7;
    repeated IRTS_FR_1 IRTS_FR_1 = 8;
    repeated IRTS_FR_2 IRTS_FR_2 = 9;
    repeated IRTS_FR_3 IRTS_FR_3 = 10;
    repeated IRTS_RL_0 IRTS_RL_0 = 11;
    repeated IRTS_RL_1 IRTS_RL_1 = 12;
    repeated IRTS_RL_2 IRTS_RL_2 = 13;
    repeated IRTS_RL_3 IRTS_RL_3 = 14;
    repeated IRTS_RR_0 IRTS_RR_0 = 15;
    repeated IRTS_RR_1 IRTS_RR_1 = 16;
    repeated IRTS_RR_2 IRTS_RR_2 = 17;
    repeated IRTS_RR_3 IRTS_RR_3 = 18;
    repeated GPS_COORDS GPS_COORDS = 19;
    repeated GPS_SPEED GPS_SPEED = 20;
    repeated LAP_COUNT LAP_COUNT = 21;
    repeated PEDALS_OUTPUT PEDALS_OUTPUT = 22;
    repeated STEERING_ANGLE STEERING_ANGLE = 23;
    repeated CONTROL_STATE CONTROL_STATE = 24;
    repeated TPMS TPMS = 25;
    repeated LC_STATUS LC_STATUS = 26;
}