syntax = "proto3";
package secondary;




message ACQUISINATOR_JMP_TO_BLT{
	uint32 acquisinatore_id = 1;
	uint64 _inner_timestamp = 2;
}
message ACQUISINATOR_FLASH_TX{
	uint64 _inner_timestamp = 1;
}
message ACQUISINATOR_FLASH_RX{
	uint64 _inner_timestamp = 1;
}
message IMU_ANGULAR_RATE{
	double x = 1;
	double y = 2;
	double z = 3;
	uint64 _inner_timestamp = 4;
}
message IMU_ACCELERATION{
	double x = 1;
	double y = 2;
	double z = 3;
	int32 imu_temperature = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FL_0{
	double channel1 = 1;
	double channel2 = 2;
	double channel3 = 3;
	double channel4 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FL_1{
	double channel5 = 1;
	double channel6 = 2;
	double channel7 = 3;
	double channel8 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FL_2{
	double channel9 = 1;
	double channel10 = 2;
	double channel11 = 3;
	double channel12 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FL_3{
	double channel13 = 1;
	double channel14 = 2;
	double channel15 = 3;
	double channel16 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FR_0{
	double channel1 = 1;
	double channel2 = 2;
	double channel3 = 3;
	double channel4 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FR_1{
	double channel5 = 1;
	double channel6 = 2;
	double channel7 = 3;
	double channel8 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FR_2{
	double channel9 = 1;
	double channel10 = 2;
	double channel11 = 3;
	double channel12 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_FR_3{
	double channel13 = 1;
	double channel14 = 2;
	double channel15 = 3;
	double channel16 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RL_0{
	double channel1 = 1;
	double channel2 = 2;
	double channel3 = 3;
	double channel4 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RL_1{
	double channel5 = 1;
	double channel6 = 2;
	double channel7 = 3;
	double channel8 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RL_2{
	double channel9 = 1;
	double channel10 = 2;
	double channel11 = 3;
	double channel12 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RL_3{
	double channel13 = 1;
	double channel14 = 2;
	double channel15 = 3;
	double channel16 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RR_0{
	double channel1 = 1;
	double channel2 = 2;
	double channel3 = 3;
	double channel4 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RR_1{
	double channel5 = 1;
	double channel6 = 2;
	double channel7 = 3;
	double channel8 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RR_2{
	double channel9 = 1;
	double channel10 = 2;
	double channel11 = 3;
	double channel12 = 4;
	uint64 _inner_timestamp = 5;
}
message IRTS_RR_3{
	double channel13 = 1;
	double channel14 = 2;
	double channel15 = 3;
	double channel16 = 4;
	uint64 _inner_timestamp = 5;
}
message GPS_COORDS{
	uint32 latitude = 1;
	uint32 longitude = 2;
	uint64 _inner_timestamp = 3;
}
message GPS_SPEED{
	uint32 speed = 1;
	uint64 _inner_timestamp = 2;
}
message ANGULAR_VELOCITY{
	double fl = 1;
	double fr = 2;
	uint64 _inner_timestamp = 3;
}
message PEDAL_THROTTLE{
	double throttle = 1;
	uint64 _inner_timestamp = 2;
}
message PEDAL_BRAKES_PRESSURE{
	double front = 1;
	double rear = 2;
	uint64 _inner_timestamp = 3;
}
message STEER_ANGLE{
	float angle = 1;
	uint64 _inner_timestamp = 2;
}
message TPMS_PRESSURE{
	uint32 fl = 1;
	uint32 fr = 2;
	uint32 rl = 3;
	uint32 rr = 4;
	uint64 _inner_timestamp = 5;
}
message TPMS_TEMPERATURE{
	uint32 fl = 1;
	uint32 fr = 2;
	uint32 rl = 3;
	uint32 rr = 4;
	uint64 _inner_timestamp = 5;
}
message TLM_UNIX_TIMESTAMP{
	uint64 timestamp = 1;
	uint64 _inner_timestamp = 2;
}
message TLM_LAP_TIME{
	uint32 lap_count = 1;
	double lap_time = 2;
	uint64 _inner_timestamp = 3;
}
message TLM_LAPS_STATS{
	uint32 lap_number = 1;
	double best_time = 2;
	double last_time = 3;
	uint64 _inner_timestamp = 4;
}
message AMMO_COMPRESSION{
	double rl = 1;
	double rr = 2;
	double fl = 3;
	double fr = 4;
	uint64 _inner_timestamp = 5;
}
message LINK_DEFORMATION{
	uint32 rod_id = 1;
	float deformation = 2;
	uint64 _inner_timestamp = 3;
}
message LINK_DEFORMATION_SET_CALIBRATION{
	uint32 rod_id = 1;
	float deformation = 2;
	uint64 _inner_timestamp = 3;
}
message DEBUG_SIGNAL_1{
	double field_1 = 1;
	double field_2 = 2;
	double field_3 = 3;
	double field_4 = 4;
	uint64 _inner_timestamp = 5;
}
message DEBUG_SIGNAL_2{
	double field_1 = 1;
	double field_2 = 2;
	double field_3 = 3;
	double field_4 = 4;
	uint64 _inner_timestamp = 5;
}
message COOLING_TEMP{
	double top_left = 1;
	double bottom_left = 2;
	double top_right = 3;
	double bottom_right = 4;
	uint64 _inner_timestamp = 5;
}


message Pack{
	repeated ACQUISINATOR_JMP_TO_BLT ACQUISINATOR_JMP_TO_BLT = 1;
	repeated ACQUISINATOR_FLASH_TX ACQUISINATOR_FLASH_TX = 2;
	repeated ACQUISINATOR_FLASH_RX ACQUISINATOR_FLASH_RX = 3;
	repeated IMU_ANGULAR_RATE IMU_ANGULAR_RATE = 4;
	repeated IMU_ACCELERATION IMU_ACCELERATION = 5;
	repeated IRTS_FL_0 IRTS_FL_0 = 6;
	repeated IRTS_FL_1 IRTS_FL_1 = 7;
	repeated IRTS_FL_2 IRTS_FL_2 = 8;
	repeated IRTS_FL_3 IRTS_FL_3 = 9;
	repeated IRTS_FR_0 IRTS_FR_0 = 10;
	repeated IRTS_FR_1 IRTS_FR_1 = 11;
	repeated IRTS_FR_2 IRTS_FR_2 = 12;
	repeated IRTS_FR_3 IRTS_FR_3 = 13;
	repeated IRTS_RL_0 IRTS_RL_0 = 14;
	repeated IRTS_RL_1 IRTS_RL_1 = 15;
	repeated IRTS_RL_2 IRTS_RL_2 = 16;
	repeated IRTS_RL_3 IRTS_RL_3 = 17;
	repeated IRTS_RR_0 IRTS_RR_0 = 18;
	repeated IRTS_RR_1 IRTS_RR_1 = 19;
	repeated IRTS_RR_2 IRTS_RR_2 = 20;
	repeated IRTS_RR_3 IRTS_RR_3 = 21;
	repeated GPS_COORDS GPS_COORDS = 22;
	repeated GPS_SPEED GPS_SPEED = 23;
	repeated ANGULAR_VELOCITY ANGULAR_VELOCITY = 24;
	repeated PEDAL_THROTTLE PEDAL_THROTTLE = 25;
	repeated PEDAL_BRAKES_PRESSURE PEDAL_BRAKES_PRESSURE = 26;
	repeated STEER_ANGLE STEER_ANGLE = 27;
	repeated TPMS_PRESSURE TPMS_PRESSURE = 28;
	repeated TPMS_TEMPERATURE TPMS_TEMPERATURE = 29;
	repeated TLM_UNIX_TIMESTAMP TLM_UNIX_TIMESTAMP = 30;
	repeated TLM_LAP_TIME TLM_LAP_TIME = 31;
	repeated TLM_LAPS_STATS TLM_LAPS_STATS = 32;
	repeated AMMO_COMPRESSION AMMO_COMPRESSION = 33;
	repeated LINK_DEFORMATION LINK_DEFORMATION = 34;
	repeated LINK_DEFORMATION_SET_CALIBRATION LINK_DEFORMATION_SET_CALIBRATION = 35;
	repeated DEBUG_SIGNAL_1 DEBUG_SIGNAL_1 = 36;
	repeated DEBUG_SIGNAL_2 DEBUG_SIGNAL_2 = 37;
	repeated COOLING_TEMP COOLING_TEMP = 38;
}

